grafana/grafana-efs-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: efs-provisioner
  namespace: grafana

spec:
  replicas: 1
  selector:
    matchLabels:
      app: efs-provisioner
  strategy:
    type: Recreate 
  template:
    metadata:
      labels:
        app: efs-provisioner
    spec:
      serviceAccount: efs-provisioner
      containers:
        - name: efs-provisioner
          image: quay.io/external_storage/efs-provisioner:latest
          volumeMounts:
            - name: pv-volume
              mountPath: /persistentvolumes
      volumes:
        - name: pv-volume
          nfs:
            server: fs-946e6b5f.efs.eu-west-1.amazonaws.com
            path: /
...
